update with newer openapi.yaml and regen
