# model_resource.go
@@ -53,6 +53,8 @@ type Resource struct {
 	AutoApproval *bool `json:"auto_approval,omitempty"`
 	// The ID of the associated request template.
 	RequestTemplateId *string `json:"request_template_id,omitempty"`
+	// A bool representing whether or not to allow access requests to this resource.
+	IsRequestable *bool `json:"is_requestable,omitempty"`
 	// The ID of the parent resource.
 	ParentResourceId *string `json:"parent_resource_id,omitempty"`
 	// JSON metadata about the remote resource. Only set for items linked to remote systems. See [this guide](https://docs.opal.dev/reference/end-system-objects) for details.
@@ -648,6 +650,38 @@ func (o *Resource) SetRequestTemplateId(v string) {
 	o.RequestTemplateId = &v
 }
 
+// GetIsRequestable returns the IsRequestable field value if set, zero value otherwise.
+func (o *Resource) GetIsRequestable() bool {
+	if o == nil || isNil(o.IsRequestable) {
+		var ret bool
+		return ret
+	}
+	return *o.IsRequestable
+}
+
+// GetIsRequestableOk returns a tuple with the IsRequestable field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Resource) GetIsRequestableOk() (*bool, bool) {
+	if o == nil || isNil(o.IsRequestable) {
+    return nil, false
+	}
+	return o.IsRequestable, true
+}
+
+// HasIsRequestable returns a boolean if a field has been set.
+func (o *Resource) HasIsRequestable() bool {
+	if o != nil && !isNil(o.IsRequestable) {
+		return true
+	}
+
+	return false
+}
+
+// SetIsRequestable gets a reference to the given bool and assigns it to the IsRequestable field.
+func (o *Resource) SetIsRequestable(v bool) {
+	o.IsRequestable = &v
+}
+
 // GetParentResourceId returns the ParentResourceId field value if set, zero value otherwise.
 func (o *Resource) GetParentResourceId() string {
 	if o == nil || isNil(o.ParentResourceId) {
@@ -767,6 +801,9 @@ func (o Resource) MarshalJSON() ([]byte, error) {
 	}
 	if !isNil(o.RequestTemplateId) {
 		toSerialize["request_template_id"] = o.RequestTemplateId
+	}
+	if !isNil(o.IsRequestable) {
+		toSerialize["is_requestable"] = o.IsRequestable
 	}
 	if !isNil(o.ParentResourceId) {
 		toSerialize["parent_resource_id"] = o.ParentResourceId
